--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,8 @@ ENV/
 # Spyder project settings
 .spyderproject
 .spyproject
+.spyderproject/
+.spyproject/
 
 # Rope project settings
 .ropeproject
